--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -248,8 +248,10 @@ margin: auto;
 display: flex;
 flex-direction: row;
 align-content: space-between;
-padding-bottom: 100px;
-padding-top: 100px;
+padding-bottom: 25px;
+padding-top: 50px;
+border-top: solid black 2px;
+border-bottom: solid black 2px;
 }
 
 .services-services h4 {
@@ -259,7 +261,7 @@ padding-top: 100px;
 
 .services-services p {
 	font-size: 30px;
-	width: 
+	padding-bottom: 50px;
 }
 .services-facts {
 
@@ -279,6 +281,7 @@ padding-top: 100px;
 	border: solid black 2px;
 	padding: 50px;
 	background-color: lightgrey;
+	margin: 50px 50px 100px 50px;
 }
 .services-topbody h4 {
 	
@@ -310,10 +313,15 @@ padding-top: 100px;
 }
 
 .services-facts {
-	width: 100%
+	width: 100%;
+	padding-top: 50px;
 }
 .services-infoimg {
-	height: 350px;
+	height: 700px;
+	width: 700px;
+	padding-top: 50px;
+	padding-right: 100px;
+
 	
 }
 
@@ -329,7 +337,7 @@ padding-top: 100px;
 	height: 75px;
 	font-size: 23px;
 	transition-duration: .7s;
-	margin-left: 180px;
+	
 	
 }
 
@@ -339,4 +347,14 @@ ul {
 	padding-left: 100px;
 	list-style: square outside none;
 	font-size: 30px;
+}
+
+.services-bottom {
+	display: flex;
+	
+}
+
+.services-copyright {
+	text-align: center;
+	font-size: 20px;
 }
